--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -10,6 +10,7 @@
 
 
 
+
 body,
 input,
 textarea,
@@ -464,4 +465,14 @@ h6,
 }
 #header3-i .mbr-section-title {
   text-align: left;
+}
+#header3-l .mbr-section-title,
+#header3-l .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-l .mbr-section-title {
+  text-align: left;
+}
+#content1-m P {
+  font-family: 'Roboto', sans-serif;
 }
